# malefica

./: .appveyor.yml  .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.ci_scripts/: travis.linux
.travis_scripts/: travis.linux  travis.osx
3rd/: CMakeLists.txt
include/malefica/: algorithm.hxx  types.hxx
include/malefica/debug/: formatter.hxx  logging.hxx  message.hxx
include/malefica/ecs/: entity_factory.hxx
include/malefica/log/: formatter.hxx  logger.hxx  logging.hxx  message.hxx  message_dispatcher.hxx  message_sink.hxx
include/malefica/math/: vector_2d.hxx  vector_3d.hxx
include/malefica/mge/: algorithm.hxx  exception.hxx  types.hxx
include/malefica/mge/log/: formatter.hxx  logging.hxx  message.hxx
include/malefica/mge/math/: vector_2d.hxx  vector_3d.hxx
include/malefica/mtg/: card_basic.hxx  card_color.hxx  mana_cost.hxx  mana_types.hxx
include/malefica/thread/: dispatcher.hxx  queue.hxx
src/: CMakeLists.txt
src/malefica/: CMakeLists.txt
src/malefica/log/: logger.cxx  message_sink.cxx
src/malefica/mtg/: mana_cost.cxx  mana_types.cxx
src/tests/: CMakeLists.txt
src/tests/unit_tests/: CMakeLists.txt
src/tests/unit_tests/log/: formatter_tests.cxx  message_tests.cxx
src/tests/unit_tests/malefica/debug/: formatter_tests.cxx
src/tests/unit_tests/malefica/ecs/: entity_factory_tests.cxx
src/tests/unit_tests/malefica/log/: formatter_tests.cxx  logger_tests.cxx  message_dispatcher_tests.cxx
src/tests/unit_tests/malefica/mocks/: message_container.hxx
src/tests/unit_tests/malefica/thread/: dispatcher_tests.cxx  queue_tests.cxx
src/tests/unit_tests/math/: vector_2d_tests.cxx  vector_3d_tests.cxx
src/tests/unit_tests/mge/log/: formatter_tests.cxx  message_tests.cxx
src/tests/unit_tests/mtg/: mana_cost_tests.cxx  mana_types_tests.cxx
